test_programs/compile_failure/noirc_frontend_tests_errors_on_loop_without_break/src/main.nr

    fn main() {
        // Safety: test
        unsafe {
            foo()
        }
    }

    unconstrained fn foo() {
        let mut x = 1;
        loop {
            x += 1;
            bar(x);
        }
    }

    fn bar(_: Field) {}
    